// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should match snapshot 1`] = `
<header>
  <Link
    className="logo-a-tag"
    to="/"
  >
    <ForwardRef(SvgCoderDojoColorado)
      alt="Coder Dojo Colorado Logo"
      className="logo"
    />
  </Link>
  <section>
    <NavLink
      className="nav-link"
      to="/"
    >
      FIND A DOJO
    </NavLink>
    <div>
      <NavLink
        className="nav-link"
        onClick={[Function]}
        to="/dashboard/student"
      >
        DASHBOARD
      </NavLink>
      <NavLink
        className="nav-link logout"
        onClick={[Function]}
        to="/"
      >
        LOGOUT
      </NavLink>
    </div>
  </section>
</header>
`;

exports[`Header should match snapshot if there is no user 1`] = `
<header>
  <Link
    className="logo-a-tag"
    to="/"
  >
    <ForwardRef(SvgCoderDojoColorado)
      alt="Coder Dojo Colorado Logo"
      className="logo"
    />
  </Link>
  <section>
    <NavLink
      className="nav-link"
      to="/"
    >
      FIND A DOJO
    </NavLink>
    <div>
      <NavLink
        className="nav-link"
        to="/login"
      >
        LOGIN
      </NavLink>
      <NavLink
        className="nav-link"
        to="/register"
      >
        REGISTER
      </NavLink>
    </div>
  </section>
</header>
`;
